<resources>
    <string name="app_name">Android - Assignment 1</string>
    <string name="answer"></string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="clear">C</string>

    <string name="advanced">ADVANCED - WITH HISTORY</string>

    <string name="alertMessageOneDigit">Only one digit operands allowed!</string>
    <string name="alertMessageOneOperator">Only one character operator is allowed!</string>
    <string name="alertMessageEqualSignInvalidPosition">You have entered \'=\' in an invalid position!</string>
    <string name="alertMessageInvalidValue">You have entered an invalid equation. Please re-enter!</string>
    <string name="alertMessageNonDigitCharacterNotOperator">You have entered a non-numerical character that is not an operator!</string>
    <string name="alertMessageDivisionByZero">Division by zero is not permitted!</string>
    <string name="alertMessageUnknownError">Unknown Error</string>
    <string name="alertMessageNumberOrOperatorError">Number or Operator error!</string>
    <string name="alertMessageValidationFailedNumberOrOperatorError">Validation Failed! Number or Operator error!</string>
    <string name="alertMessageValidationFailedEnterNewValue">Validation failed! Please enter a new value</string>
    <string name="standard_no_history">STANDARD - NO HISTORY</string>
</resources>