<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?android:attr/buttonBarStyle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!---<androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ForestGreen"
        app:title="Assignment1"
        app:titleTextColor="#ffffff" /> -->

    <TextView
        android:id="@+id/answerLineTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="end"
        android:text="@string/answer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="RtlHardcoded" >
    </TextView>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:orientation="horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:backgroundTint="@color/ForestGreen" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        style="?android:attr/buttonBarButtonStyle"
        android:backgroundTint="@color/ForestGreen"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        style="?android:attr/buttonBarButtonStyle"
        android:backgroundTint="@color/ForestGreen"/>
        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>

    </LinearLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:orientation="horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ForestGreen"
            android:text="@string/five"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>
        <Button
            android:id="@+id/buttonMinus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>

    </LinearLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:orientation="horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>

        <Button
            android:id="@+id/button8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>

        <Button
            android:id="@+id/button9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>
        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>

    </LinearLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:orientation="horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>

        <Button
            android:id="@+id/button0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>

        <Button
            android:id="@+id/buttonEquals"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>
        <Button
            android:id="@+id/buttonDivide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:backgroundTint="@color/ForestGreen"/>

    </LinearLayout>
    <Button
        android:id="@+id/buttonAdvanced"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/navy"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/advanced" />

</LinearLayout>